Fixed color contrast errors

--- a/styles/larger.css
+++ b/styles/larger.css
@@ -45,7 +45,7 @@
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        background-color: var(--navBackgroundColor);
+        background-color: rgb(28, 92, 28);
     }
 
     .navigation a{
@@ -169,7 +169,7 @@
         margin-left: 2rem;
         margin-right: 2rem;
         border: 1px solid rgba(0, 0, 0, 0.3);
-        background-color: var(--navBackgroundColor);
+        background-color: rgb(28, 92, 28);
         color: rgb(255, 255, 255);
         border-radius: 10%;
         font-family: "Raleway", serif;
